--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <title>CSS-desafio do modulo 2 </title>
+    <title>CSS-desafio </title>
 </head>
 <body>
     <div class="wrapper">
